[tool.poetry]
name = "easyquery-query-builder"
version = "0.1.1"
description = ""
authors = ["Smolke <d.smolczynski1@gmail.com>"]
readme = "README.md"
packages = [{include = "easyquery_query_builder"}]

[tool.poetry.dependencies]
python = "^3.11"
easyvalid-data-validator = "^0.1.1"



[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
easyvalid-data-validator = "^0.1.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
